--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "duckyaml"
 version = "0.1.0"
-description = ""
+description = "Replace yaml with properties"
 authors = ["Prashant Ghimire <pras.ghim@gmail.com>"]
+license = "MIT"
 readme = "README.md"
-packages = [{include = "yaml_to_props"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -14,4 +14,3 @@ pyyaml = "^6.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
